--- a/.gitignore
+++ b/.gitignore
@@ -7,21 +7,20 @@ target/
 .repository/
 *.iml
 *.iws
-#*.jrtc
-#*.java
+*.jrtc
+*.java
 *.class
 *.info
 *.properties
 *.jar
-*.txt
-#/1.JavaSyntax/
-#/2.JavaCore/
-#/3.JavaMultithreading/
-#/4.JavaCollections/
-#/5.OnlineInternship/
+
+/1.JavaSyntax/
+/2.JavaCore/
+/3.JavaMultithreading/
+/4.JavaCollections/
+/5.OnlineInternship/
 /out/
 /JavaRushPlugin.properties
 /Instruction.png
 /out.log
 /out.log.*
-/0.notes/
