--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,20 @@ target/
 .repository/
 *.iml
 *.iws
-*.jrtc
+#*.jrtc
 *.java
 *.class
 *.info
 *.properties
 *.jar
-
-/1.JavaSyntax/
-/2.JavaCore/
-/3.JavaMultithreading/
-/4.JavaCollections/
-/5.OnlineInternship/
-/out/
-/JavaRushPlugin.properties
-/Instruction.png
+.gitignore
+#/1.JavaSyntax/
+#/2.JavaCore/
+#/3.JavaMultithreading/
+#/4.JavaCollections/
+#/5.OnlineInternship/
+#/out/
+#/JavaRushPlugin.properties
+#/Instruction.png
 /out.log
 /out.log.*
